data/Themes/cobds/public/css/screen.scss
@import "scss/reset";
@import "scss/cobds-utils";

@import "scss/alerts";
@import "scss/header";
@import "scss/footer";
@import "scss/form";
@import "scss/pagination";
@import "scss/badge";

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
}

html,
body {
  min-height: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: $fontIBM;
}

strong {
  font-weight: 600;
}

.container {
  margin: 0 auto;
  width: calc(100% - 60px);
  max-width: 1080px;

  @media (max-width: 767px) {
    width: calc(100% - 30px);
    max-width: calc(100% - 30px);
  }
}

main {
  > .content {
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
  }

  aside {
    &.sidebar {
      width: 320px;
      padding: 0 20px 0 0;

      nav,
      details {
        border: $border-default;
        background: lighten($color-grey-lighter, 2%);
        border-radius: $radius-default;
        margin: 0 0 20px 0;
        padding: 20px 20px 15px 20px;
        word-break: break-word;

        &:last-child {
          margin: 0;
        }

        &:not[open] {
          cursor: inherit;
        }

        &[open] {
          -webkit-box-shadow: 0 0.2rem 0.9rem 0 rgba(0, 0, 0, 0.05);
          box-shadow: 0 0.2rem 0.9rem 0 rgba(0, 0, 0, 0.05);

          > summary::before {
            content: "-";
          }
        }

        header,
        summary {
          cursor: pointer;
          position: relative;
          margin: 0 0 5px 0;
          color: $color-blue;
          font-weight: 600;
          text-transform: capitalize;
          list-style-type: none;

          &::before {
            content: "+";
            position: absolute;
            right: 0;
          }

          &::-webkit-details-marker {
            display: none;
          }
        }

        &::marker,
        &::-webkit-details-marker {
          color: red;
        }

        &:hover,
        &:focus {
          -webkit-box-shadow: 0 0.2rem 0.9rem 0 rgba(0, 0, 0, 0.05);
          box-shadow: 0 0.2rem 0.9rem 0 rgba(0, 0, 0, 0.05);
        }

        &.mobile {
          display: none;

          &[open] {
            > summary::before {
              content: "\2715";
            }
          }

          > header,
          > summary {
            &::before {
              content: "\2630";
              position: absolute;
              right: 0;
            }
          }
        }

        @media all and (max-width: 767px) {
          &.mobile {
            display: block;
            background: transparent;
            border: none;
            padding: 0;
            box-shadow: none;

            > summary {
              color: $text-color;
              font-weight: 600;
              // font-size: 18px;
              // line-height: 22px;
              margin: 0 0 15px 0;
            }
          }

          &.full {
            display: none;
          }
        }
      }

      @media all and (max-width: 767px) {
      }

      ul {
        margin: 0;

        li {
          &:last-child {
            a {
              padding: 10px 0 0 0;
              border-bottom: none;
            }
          }

          a {
            display: flex;
            align-content: center;
            width: 100%;
            font-weight: 600;
            // color: $color-blue;
            color: lighten($text-color, 10%);
            text-transform: capitalize;
            text-decoration: none;
            margin: 0;
            padding: 10px 0;
            border-bottom: $border-default;

            &:hover,
            &:focus {
              background: lighten($color-grey-lighter, 2%);
              color: $color-blue;

              .badge {
                background: $color-blue;
                color: white;
              }
            }

            // &:last-child {
            //   border-bottom: none;
            //   padding: 5px 0 0 0;
            // }

            .badge {
              font-size: 14px;
              margin: 0 0 0 auto;
            }
          }
        }
      }

      @media all and (max-width: 767px) {
        // background: red;
        width: 100%;
        padding: 0;
        margin: 0;

        .full {
          display: none;
        }
      }

      // @media all and (min-width: 768px) {
      //   background: green;
      //   width: 100%;
      //   padding: 0;
      // }

      // @media all and (min-width: 920px) {
      //   background: yellow;
      //   width: 100%;
      // }
    }
  }

  .results-wrapper {
    position: relative;
    top: 0;
    z-index: 1;
    width: calc(100% - 320px);
    padding: 0;
    border: none;
    background-color: transparent;

    @media all and (max-width: 767px) {
      width: 100%;
      margin: 0;
    }
  }

  .results {
    .result {
      display: block;
      margin: 0 0 $size-m 0;
      padding: $size-m $size-m $size-m/2 $size-m;
      border-radius: $radius-default;
      border: 1px solid transparent;
      text-decoration: none;
      word-break: break-word;

      &:nth-child(even) {
        border: $border-default;
        background: lighten($color-grey-lighter, 2%);
      }

      &:hover,
      &:focus {
        border: $border-default;
        background: $color-grey-lighter;
        -webkit-box-shadow: 0 0.2rem 0.9rem 0 rgba(0, 0, 0, 0.05);
        box-shadow: 0 0.2rem 0.9rem 0 rgba(0, 0, 0, 0.05);

        header {
          h1 {
            color: $color-blue;
          }
        }
      }

      header {
        margin: 0;

        h1 {
          color: $text-color;
          font-weight: $weight-semi-bold;
          font-size: $size-m + 2;
          line-height: $size-m + 6;
          margin: 0 0 $size-m/2 0;
        }

        .meta {
          margin: 0 0 $size-m/2 0;

          span {
            font-size: $size-s;
            margin: 0 $size-m/2 0 0;
          }
        }

        a {
          font-size: $size-s;
          display: block;
          margin: 0 0 $size-m/2 0;
          color: $color-blue;
          text-decoration: none;

          &:hover,
          &:focus {
            text-decoration: underline;
            color: $text-color;
          }
        }

        @media all and (max-width: 767px) {
          span {
            margin: 0 0 10px 0;
          }
        }
      }

      .badge {
        font-size: 14px;
        margin: 0 8px 8px 0;
      }

      p {
        margin: 0 0 $space-xs 0;

        &:last-child {
          margin: 0;
        }
      }
    }
  }
}

.toolbar {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0 20px 0;

  span {
    display: block;
    margin: 0 20px 0 0;
    font-weight: 600;
    line-height: 24px;
  }

  @media all and (max-width: 767px) {
    margin: 20px 0;
  }
}

